--- a/src/components/Checklist.css
+++ b/src/components/Checklist.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  border: 2px, solid, black !important;
+  background-color: green !important;
+  color: white !important;
+}
