--- a/src/index.css
+++ b/src/index.css
@@ -194,3 +194,9 @@ code {
 .icon-send:before {
 	content: "🔓";
 }
+
+button {
+	border: 2px, solid, black !important;
+	background-color: green !important;
+	color: white !important;
+  }
